[gd_scene load_steps=29 format=3 uid="uid://b512usxxkschk"]

[ext_resource type="Script" path="res://battle.gd" id="1_3mavc"]
[ext_resource type="Texture2D" uid="uid://c4fohm5t1agbo" path="res://ui_art/skull.jpg" id="2_otdd7"]
[ext_resource type="Texture2D" uid="uid://ca0rub7w2eam6" path="res://ui_art/combat_background.png" id="2_toaiu"]
[ext_resource type="FontFile" uid="uid://cxlsfsc08gv5l" path="res://ui_art/Pixel_NES.otf" id="3_xufrg"]
[ext_resource type="Texture2D" uid="uid://dvkjebme5p13h" path="res://ui_art/button.png" id="6_vg5ay"]
[ext_resource type="Texture2D" uid="uid://dhip4nygb7qoy" path="res://ui_art/button_selected.png" id="7_qm2cy"]
[ext_resource type="Texture2D" uid="uid://cjy7lfih10j11" path="res://ui_art/button_disabled.png" id="8_jpcqw"]
[ext_resource type="PackedScene" uid="uid://bwjh30l734fb1" path="res://characters/player.tscn" id="9_3ogoo"]
[ext_resource type="Script" path="res://zombie.gd" id="10_7k72g"]
[ext_resource type="AudioStream" uid="uid://c6isbhikk3fuf" path="res://music/danger.wav" id="10_8fgq4"]
[ext_resource type="Texture2D" uid="uid://c80idkf2s8rda" path="res://characters/art/carrier_human_combat1.png" id="10_11a7v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vylep"]
bg_color = Color(0.917647, 0, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtce6"]
bg_color = Color(0.262745, 0.6, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xukgl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rh0ju"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b3yjk"]
texture = ExtResource("6_vg5ay")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xgysn"]
texture = ExtResource("7_qm2cy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1af2u"]
texture = ExtResource("8_jpcqw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h0n4f"]
texture = ExtResource("6_vg5ay")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smdkp"]
texture = ExtResource("7_qm2cy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ls2e"]
texture = ExtResource("8_jpcqw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_luux4"]
texture = ExtResource("6_vg5ay")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nyedj"]
texture = ExtResource("7_qm2cy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iflhk"]
texture = ExtResource("8_jpcqw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0lus"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_jg3cx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r56km"]
resource_name = "enemy_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yep6"]
_data = {
"RESET": SubResource("Animation_jg3cx"),
"enemy_hit": SubResource("Animation_r56km")
}

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.2
anchor_bottom = 0.2
offset_right = 1920.0
offset_bottom = 1304.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 9.35
script = ExtResource("1_3mavc")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -330.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_toaiu")

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -182.5
offset_right = 140.0
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_otdd7")

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(20, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vylep")
theme_override_styles/fill = SubResource("StyleBoxFlat_mtce6")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 30

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.869
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320068
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xukgl")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 45.0
offset_right = -120.0
offset_bottom = -39.6801
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 40
text = "PLAYER
"

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/HBoxContainer"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_vylep")
theme_override_styles/fill = SubResource("StyleBoxFlat_mtce6")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 30

[node name="Actions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rh0ju")

[node name="HBoxContainer" type="HBoxContainer" parent="Actions"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Attack" type="Button" parent="Actions/HBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_b3yjk")
theme_override_styles/hover = SubResource("StyleBoxTexture_xgysn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1af2u")
text = "Attack
"

[node name="Defend" type="Button" parent="Actions/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_h0n4f")
theme_override_styles/hover = SubResource("StyleBoxTexture_smdkp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1ls2e")
text = "Defend
"

[node name="Run" type="Button" parent="Actions/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxTexture_luux4")
theme_override_styles/hover = SubResource("StyleBoxTexture_nyedj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_iflhk")
text = "Run
"

[node name="Textbox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_right = -40.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c0lus")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -60.0
offset_right = 1400.0
offset_bottom = 100.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_xufrg")
theme_override_font_sizes/font_size = 60
text = "SKELETON"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6yep6")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-5, 0)
anchor_mode = 0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="player" parent="." instance=ExtResource("9_3ogoo")]
visible = false

[node name="zombie" type="CharacterBody2D" parent="."]
script = ExtResource("10_7k72g")
texture = ExtResource("10_11a7v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8fgq4")
autoplay = true

[connection signal="pressed" from="Actions/HBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Actions/HBoxContainer/Defend" to="." method="_on_defend_pressed"]
